control datetime field from webconfig

--- a/ERPSolution/ERPWebApplication/ERPWebApplication.csproj
+++ b/ERPSolution/ERPWebApplication/ERPWebApplication.csproj
@@ -1051,23 +1051,27 @@
   <ItemGroup>
     <Compile Include="AppClass\AccountType.cs" />
     <Compile Include="AppClass\CommonClass\CGlobalMeaage.cs" />
-    <Compile Include="AppClass\CommonClass\Class1.cs" />
     <Compile Include="AppClass\CommonClass\ClsDropDownListController.cs" />
     <Compile Include="AppClass\CommonClass\ClsGridViewLoad.cs" />
     <Compile Include="AppClass\CommonClass\ClsReport.cs" />
     <Compile Include="AppClass\CommonClass\ClsStatic.cs" />
-    <Compile Include="AppClass\CommonClass\DataManipulation.cs" />
     <Compile Include="AppClass\CommonClass\DataProcess.cs" />
-    <Compile Include="AppClass\CommonClass\SqlGenerateForItemRequisition.cs" />
-    <Compile Include="AppClass\CommonClass\sqlGenerationClientInformation.cs" />
-    <Compile Include="AppClass\CommonClass\SqlGenerationForEmployee.cs" />
-    <Compile Include="AppClass\CommonClass\SqlGenerationForItemDetail.cs" />
-    <Compile Include="AppClass\CommonClass\StoredProcedureExecutor.cs" />
+    <Compile Include="AppClass\CommonClass\DataManipulation.cs" />
     <Compile Include="AppClass\CommonClass\TopMostMessageBox.cs" />
+    <Compile Include="AppClass\DataAccess\ActivitySetupController.cs" />
+    <Compile Include="AppClass\DataAccess\ClientInformationController.cs" />
+    <Compile Include="AppClass\DataAccess\DepartmentSetupController.cs" />
+    <Compile Include="AppClass\DataAccess\EmployeeInformationController.cs" />
     <Compile Include="AppClass\DataAccess\ItemCategorySetupController.cs" />
+    <Compile Include="AppClass\DataAccess\ItemDetailController.cs" />
+    <Compile Include="AppClass\DataAccess\ItemRequisitionController.cs" />
     <Compile Include="AppClass\DataAccess\ItemSetupController.cs" />
     <Compile Include="AppClass\DataAccess\ItemTypeSetupController.cs" />
     <Compile Include="AppClass\DataAccess\ItemUsageSetupController.cs" />
+    <Compile Include="AppClass\DataAccess\PersonTypeSetupController.cs" />
+    <Compile Include="AppClass\DataAccess\ProjectSetupController.cs" />
+    <Compile Include="AppClass\DataAccess\ProritySetupController.cs" />
+    <Compile Include="AppClass\DataAccess\PurposeSetupController.cs" />
     <Compile Include="AppClass\DataAccess\SuppliersController.cs" />
     <Compile Include="AppClass\DataAccess\UnitSetupController.cs" />
     <Compile Include="AppClass\Model\BranchSetup.cs" />
@@ -1077,8 +1081,12 @@
     <Compile Include="AppClass\Model\ClsRequisitionDetail.cs" />
     <Compile Include="AppClass\Model\clsRequisitionHeader.cs" />
     <Compile Include="AppClass\Model\CompanySetup.cs" />
+    <Compile Include="AppClass\Model\FileUploadDetail.cs" />
+    <Compile Include="AppClass\Model\FileUploadHeader.cs" />
     <Compile Include="AppClass\Model\ItemCategorySetup.cs" />
     <Compile Include="AppClass\Model\ItemSetup.cs" />
+    <Compile Include="AppClass\Model\RequisitionDetail.cs" />
+    <Compile Include="AppClass\Model\RequisitionHeader.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="About.aspx.cs">
