--- a/ERPSolution/ERPWebApplication/ERPWebApplication.csproj
+++ b/ERPSolution/ERPWebApplication/ERPWebApplication.csproj
@@ -1018,6 +1018,7 @@
     <Content Include="WebService\ServiceSystem.asmx" />
     <Content Include="ClassDiagram1.cd" />
     <Content Include="ClassDiagram2.cd" />
+    <Content Include="ClassDiagram3.cd" />
     <None Include="Properties\PublishProfiles\ERPApplicationPublish.pubxml" />
     <Content Include="README.docx" />
     <None Include="Scripts\jquery-3.1.0.intellisense.js" />
@@ -1108,6 +1109,7 @@
     <Compile Include="AppClass\DataAccess\TwoColumnTablesController.cs" />
     <Compile Include="AppClass\DataAccess\UnitSetupController.cs" />
     <Compile Include="AppClass\Model\BranchSetup.cs" />
+    <Compile Include="AppClass\Model\BusinessType.cs" />
     <Compile Include="AppClass\Model\ClsCompanySetup.cs" />
     <Compile Include="AppClass\Model\ClsFileUploadDetail.cs" />
     <Compile Include="AppClass\Model\ClsFileUploadHeader.cs" />
@@ -1119,11 +1121,13 @@
     <Compile Include="AppClass\Model\CompanySetup.cs" />
     <Compile Include="AppClass\Model\CountryDetailsSetup.cs" />
     <Compile Include="AppClass\Model\CountrySetup.cs" />
+    <Compile Include="AppClass\Model\DistrictSetup.cs" />
     <Compile Include="AppClass\Model\FileUploadDetail.cs" />
     <Compile Include="AppClass\Model\FileUploadHeader.cs" />
     <Compile Include="AppClass\Model\ItemCategorySetup.cs" />
     <Compile Include="AppClass\Model\ItemSetup.cs" />
     <Compile Include="AppClass\Model\NodeList.cs" />
+    <Compile Include="AppClass\Model\OwnershipType.cs" />
     <Compile Include="AppClass\Model\RequisitionDetail.cs" />
     <Compile Include="AppClass\Model\RequisitionHeader.cs" />
     <Compile Include="AppClass\Model\TwoColumnsTableData.cs" />
